# mdtype

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  SPEC.md
crates/mdtype/: Cargo.toml
crates/mdtype-core/: Cargo.toml  README.md
crates/mdtype-core/src/: diagnostic.rs  error.rs  extract.rs  lib.rs  parser.rs  rule.rs  runner.rs  schema.rs  source.rs  validator.rs  workspace.rs
crates/mdtype-reporter-human/: Cargo.toml  README.md
crates/mdtype-reporter-human/src/: lib.rs
crates/mdtype-reporter-human/src/snapshots/: mdtype_reporter_human__tests__clean_run_summary.snap  mdtype_reporter_human__tests__no_color_quiet_omits_summary.snap  mdtype_reporter_human__tests__no_color_snapshot.snap
crates/mdtype-reporter-json/: Cargo.toml  README.md
crates/mdtype-reporter-json/src/: lib.rs
crates/mdtype-reporter-json/src/snapshots/: mdtype_reporter_json__tests__payload_clean_pretty.snap  mdtype_reporter_json__tests__payload_compact.snap  mdtype_reporter_json__tests__payload_pretty.snap
crates/mdtype-rules-obsidian/: Cargo.toml  README.md
crates/mdtype-rules-obsidian/src/: lib.rs  links_obsidian_vault.rs
crates/mdtype-rules-stdlib/: Cargo.toml  README.md
crates/mdtype-rules-stdlib/src/: forbid_h1.rs  forbidden_sections.rs  lib.rs  required_sections.rs  resolve.rs  section_order.rs
crates/mdtype-rules-stdlib/src/links/: mod.rs  relative_path.rs
crates/mdtype-rules-stdlib/src/types/: entity_ref.rs  mod.rs
crates/mdtype-schema-yaml/: Cargo.toml  README.md
crates/mdtype-schema-yaml/src/: entity_walker.rs  lib.rs
crates/mdtype-tests/: Cargo.toml
crates/mdtype-tests/fixtures/body-forbidden-sections/content/: clean.md  has-todo.md
crates/mdtype-tests/fixtures/body-forbidden-sections/expected/: stdout.human  stdout.json
crates/mdtype-tests/fixtures/body-forbidden-sections/schemas/: post.yaml
crates/mdtype-tests/fixtures/body-required-sections/content/: all-missing.md  all-present.md  missing-conclusion.md
crates/mdtype-tests/fixtures/body-required-sections/expected/: stdout.human  stdout.json
crates/mdtype-tests/fixtures/body-required-sections/schemas/: post.yaml
crates/mdtype-tests/fixtures/body-section-order-relaxed/content/: correct.md
crates/mdtype-tests/fixtures/body-section-order-relaxed/expected/: stdout.human  stdout.json
crates/mdtype-tests/fixtures/body-section-order-relaxed/schemas/: post.yaml
crates/mdtype-tests/fixtures/body-section-order-strict/content/: extra-between.md  inverted.md  missing.md
crates/mdtype-tests/fixtures/body-section-order-strict/expected/: stdout.human  stdout.json
crates/mdtype-tests/fixtures/body-section-order-strict/schemas/: post.yaml
crates/mdtype-tests/fixtures/config-explicit/: args.txt
crates/mdtype-tests/fixtures/config-explicit/conf/: .mdtype.yaml
crates/mdtype-tests/fixtures/config-explicit/content/: hello.md
crates/mdtype-tests/fixtures/config-explicit/schemas/: post.yaml
crates/mdtype-tests/fixtures/config-malformed/: .mdtype.yaml
crates/mdtype-tests/fixtures/config-malformed/content/: anything.md
crates/mdtype-tests/fixtures/config-malformed/expected/: stderr
crates/mdtype-tests/fixtures/config-missing/content/: note.md
crates/mdtype-tests/fixtures/config-missing/expected/: stderr
crates/mdtype-tests/fixtures/config-unknown-rule/content/: file.md
crates/mdtype-tests/fixtures/config-unknown-rule/expected/: stderr
crates/mdtype-tests/fixtures/config-unknown-rule/schemas/: post.yaml
crates/mdtype-tests/fixtures/empty-tree/expected/: stdout.json
crates/mdtype-tests/fixtures/entity-refs/: .mdtype.yaml
crates/mdtype-tests/fixtures/entity-refs-composition-rejected/content/: post.md
crates/mdtype-tests/fixtures/entity-refs-composition-rejected/expected/: stderr
crates/mdtype-tests/fixtures/entity-refs-composition-rejected/schemas/: post.yaml
crates/mdtype-tests/fixtures/entity-refs-ref-rejected/content/: post.md
crates/mdtype-tests/fixtures/entity-refs-ref-rejected/expected/: stderr
crates/mdtype-tests/fixtures/entity-refs-ref-rejected/schemas/: post.yaml
crates/mdtype-tests/fixtures/entity-refs/expected/: stdout.human  stdout.json
crates/mdtype-tests/fixtures/entity-refs/schemas/: author.yaml  doc-page.yaml  post.yaml  tag.yaml
crates/mdtype-tests/fixtures/frontmatter-absent/: .mdtype.yaml
crates/mdtype-tests/fixtures/frontmatter-absent/content/: no-frontmatter.md
crates/mdtype-tests/fixtures/frontmatter-absent/expected/: stdout.human  stdout.json
crates/mdtype-tests/fixtures/frontmatter-additional-properties/content/: extra-field.md
crates/mdtype-tests/fixtures/frontmatter-additional-properties/expected/: stdout.human  stdout.json
crates/mdtype-tests/fixtures/frontmatter-malformed/content/: unclosed.md
crates/mdtype-tests/fixtures/frontmatter-malformed/expected/: stdout.human  stdout.json
crates/mdtype-tests/fixtures/frontmatter-malformed/schemas/: post.yaml
crates/mdtype-tests/fixtures/frontmatter-wrong-type/content/: scalar-tags.md
crates/mdtype-tests/fixtures/frontmatter-wrong-type/expected/: stdout.human  stdout.json
crates/mdtype-tests/fixtures/frontmatter-wrong-type/schemas/: post.yaml
crates/mdtype-tests/fixtures/glob-literal-separator/: .mdtype.yaml  top-note.md
crates/mdtype-tests/fixtures/glob-literal-separator/expected/: stdout.json
crates/mdtype-tests/fixtures/glob-literal-separator/schemas/: loose.yaml  strict.yaml
crates/mdtype-tests/fixtures/links-mixed/: .mdtype.yaml
crates/mdtype-tests/fixtures/links-mixed/content/: index.md  setup.md
crates/mdtype-tests/fixtures/multi-rule/content/: messy.md
crates/mdtype-tests/fixtures/nested-configs/: .mdtype.yaml
crates/mdtype-tests/src/: lib.rs
crates/mdtype-tests/tests/: blog_site.rs  fixtures.rs
crates/mdtype-tests/tests/snapshots/: blog_site__blog_site_human_no_color.snap  blog_site__blog_site_json.snap
crates/mdtype/src/: main.rs
crates/mdtype/tests/: golden.rs
crates/mdtype/tests/snapshots/: golden__blog_site_human_no_color.snap  golden__blog_site_json.snap
(+106 files in other folders)
