[workspace]
resolver = "2"
members = [
    "crates/mdtype-core",
    "crates/mdtype-schema-yaml",
    "crates/mdtype-rules-stdlib",
    "crates/mdtype-reporter-human",
    "crates/mdtype-reporter-json",
    "crates/mdtype",
    "crates/mdtype-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/serejke/mdtype"
homepage = "https://github.com/serejke/mdtype"
authors = ["Sergei Patrikeev"]
keywords = ["markdown", "validator", "frontmatter", "linter", "yaml"]
categories = ["command-line-utilities", "text-processing"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.20"
comrak = { version = "0.28", default-features = false }
globset = "0.4"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
insta = "1"
tempfile = "3"
escargot = "0.5"
