[package]
name = "mdtype-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for mdtype — a type checker for Markdown."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
comrak = { workspace = true }
globset = { workspace = true }
jsonschema = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
