[package]
name = "mdtype-reporter-human"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Human-readable reporter for mdtype (colored, grouped by file)."

[lints]
workspace = true

[dependencies]
mdtype-core = { path = "../mdtype-core", version = "0.2.0" }
owo-colors = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
