[package]
name = "mdtype-reporter-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured JSON reporter for mdtype. Stable, versioned public contract."

[lints]
workspace = true

[dependencies]
mdtype-core = { path = "../mdtype-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
