[package]
name = "mdtype-rules-obsidian"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Obsidian-flavored workspace rules for mdtype (wikilink integrity, vault resolution)."

[lints]
workspace = true

[dependencies]
mdtype-core = { path = "../mdtype-core", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }
