[package]
name = "mdtype-rules-stdlib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in body rules for mdtype: forbid-h1, required-sections, section-order, forbidden-sections."

[lints]
workspace = true

[dependencies]
mdtype-core = { path = "../mdtype-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
