[package]
name = "mdtype-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level integration tests for mdtype: scenario fixtures and golden snapshots."
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
escargot = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
